--- a/SportsScoreTests/SportsScore.Tests.csproj
+++ b/SportsScoreTests/SportsScore.Tests.csproj
@@ -12,6 +12,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
 		<PackageReference Include="coverlet.collector" Version="3.2.0" />
+		<PackageReference Include="Moq" Version="4.20.70" />
 		<PackageReference Include="xunit" Version="2.7.0" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.7">
 			<PrivateAssets>all</PrivateAssets>
@@ -20,6 +21,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\SportScore.API\SportScore.API.csproj" />
 	  <ProjectReference Include="..\SportsScorePredictor\SportsScorePredictor.csproj" />
 	</ItemGroup>
 
